# FindDuplicatesTool

./: LICENSE  README.md  pyproject.toml
src/find_duplicate_files/: files_handler.py  main.py  report_handler.py
