[project]
name = "find-duplicate-files"
version = "0.1.0"
description = ""
authors = [
    {name = "omer",email = "omer.roth95@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blake3 (>=1.0.8,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[tool.poetry]
packages = [{include = "find_duplicate_files", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
find-duplicates = "src.find_duplicate_files.main:main"
